json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,84 @@
 {
  "items": [
   {
+    "id": "stBp3fMGTCKOwE0hCi93dw",
+    "url": "https://stackoverflow.com/jobs/193510/senior-native-ios-developer-temp-to-perm-sharpopen?a=12TD2mbIlfmU",
+    "title": "Senior native iOS developer (temp to perm position) at #open  ",
+    "tags": [
+      "DBG:surround``OR(thrive,benefit,comfort,hour) 3N 2N(remot,work)",
+      "DBG_TECH1:k/t/w:ios/apple/6",
+      "DBG_TECH1:k/t/w:ios/mobile/6",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=6, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=6, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Jun 10, 2018 6:40:23 PM",
+    "validThrough": "Jan 1, 1970 3:00:00 AM",
+    "content": "<div>                                    <h2>About this job</h2>                    <div>                            <div>                                    <div>                                        <span>Job type: </span>                                        <span>Full-time</span>                                    </div>                                    <div>                                        <span>Experience level: </span>                                        <span>Senior</span>                                    </div>                                    <div>                                        <span>Role: </span>                                        <span>Mobile Developer</span>                                    </div>                            </div>                            <div>                                    <div>                                        <span>Industry: </span>                                        <span>Dating, Mobile Application, Social Networking</span>                                    </div>                                    <div>                                        <span>Company size: </span>                                        <span>1-10 people</span>                                    </div>                                    <div>                                        <span>Company type: </span>                                        <span>Private</span>                                    </div>                            </div>                    </div>                                                    <h2>Technologies</h2>                    <div>                        <a rel='nofollow'>ios</a><a rel='nofollow'>iphone</a><a rel='nofollow'>swift</a>                    </div>                                            <h2>Job description</h2>                <div><p>Our current iOS app was written and architected by a 3rd party who is no longer working on the project. We are looking for a senior iOS developer to take a look at the current project and provide feedback on where things stand and help with bug fixes and feature improvements.&nbsp;</p><p>Specifically, we are looking&nbsp;for feedback on:</p><p>Security</p><p>App logic vs backend logic</p><p>Code clarity</p><p>Well commented?</p><p>Code Structure</p><p>Ways to reduce calls to the API (Seems like there's a lot of duplicate calls)</p>                </div>                                    <div>                                    <div>                                        <div>        <a href='https://stackoverflow.com/jobs/apply/193510?reset=False&amp;ra=12TD2mbIlfmU&amp;oqs=a%3D12TD2mbIlfmU' rel='nofollow'>Apply now</a></div>                                                <div>                                                    <a rel='nofollow'>Ask a question</a>                                                                                                        </div>                                    </div>                        </div>        </div>            <h2>About #open</h2>            <div><p>#open is an inclusive community&nbsp;for sex-positive&nbsp;exploration</p>            </div>                            <h2>Benefits</h2>                    <ul>                            <li>                                <span></span>                                <span>Work remotely</span>                            </li>                            <li>                                <span></span>                                <span>Flexible hours</span>                            </li>                            <li>                                <span></span>                                <span>Inclusive, open-minded team</span>                            </li>                            <li>                                <span></span>                                <span>Help grow a diverse community</span>                            </li>                            <li>                                <span></span>                                <span>Work on a socially conscious project</span>                            </li>                    </ul>                "
+  },
+  {
+    "id": "He4HxyDUSlakGu6UvNXZsw",
+    "url": "http://jobmote.com/jobs/13123-sr-software-engineer-mac-remote",
+    "title": "Sr. Software Engineer - MAC (Remote)",
+    "tags": [
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:c++/c/8",
+      "DBG_TECH1:k/t/w:c/c/10",
+      "DBG_TECH1:k/t/w:cocoa/apple/16",
+      "DBG_TECH1:k/t/w:java/java/2",
+      "DBG_TECH1:k/t/w:java/mobile/1",
+      "DBG_TECH1:k/t/w:macos/apple/18",
+      "DBG_TECH1:k/t/w:winapi/dotnet/8",
+      "DBG_TECH1:k/t/w:windows/dotnet/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=16, c=18, mobile=1, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=34, java=2, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Jun 10, 2018 6:21:35 AM",
+    "validThrough": "Jan 1, 1970 3:00:00 AM",
+    "content": "Sr. Software Engineer - MAC (Remote) - Jobmote<div><div><h2>Sr. Software Engineer - MAC (Remote)</h2><h5>Equity Staffing Group</h5></div></div><div><div><div><div></div></div><div><div><div><p>Job Description</p><p><strong>Sr. MAC Software Eng-Job Summary:</strong> Senior MAC/WIN Software Engineer works in a large complex environment that demands expert COCOA/MAC OS skills, communication skills, requirements gathering skills, analysis skills, and debugging skills. In addition to the MAC expert skills, this resource has extensive knowledge of C++ and WIN OSs. This person is committed to building the best product possible working with a team that resides in multiple locations. In this role, the Senior Engineer works independently with little supervision.</p><p><strong>Responsibilities:</strong></p><ul><li><p>Maintain and enhance source code (C ++) for interviews, calculations and diagnostics</p></li><li><p>Participate actively in all phases of development of new product features, including requirements gathering, design and implementation</p></li><li><p>Complex application programming, unit testing and review of code, documentation and impact analysis</p></li><li><p>Possess thorough understanding of various object oriented methodologies and creational, structural and behavioral design patterns</p></li><li><p>Object Oriented Design Methods</p></li><li><p>Adapt pattern solutions to project</p></li><li><p>Participate in project meetings, change management process, performance testing, and production deployments</p></li><li><p>Work closely with tax development team and technical design architects</p></li><li><p>Keep up-to-date with latest Federal tax developments and update product to reflect changes in tax law</p></li></ul><p>-</p><p><strong>Must Haves:</strong></p><ul><li><p>10 + years' experience</p></li><li><p>Master's Degree in Computer Science</p></li><li><p>Windows API programming</p></li><li><p>MAC Platform ( with WIN experience as well)</p></li><li><p>Agile Methodologies</p></li><li><p>Experienced with large-scale software product development processes</p></li><li><p><strong><em>Expert in the following:</em></strong></p></li><li><p>C ++</p></li><li><p>COCOA ( MAC)</p></li><li><p>OOD</p></li><li><p>Patterns</p></li><li><p>Java Script</p></li><li><p>Graphical user interfaces</p></li></ul><p></p></div></div><div></div></div></div></div><div><a href='http://statcounter.com/' title=&quot;web statistics&quot; rel='nofollow'></a></div>"
+  },
+  {
     "id": "gf0x1JxEQEOleunb5NsARA",
     "url": "https://angel.co/simon-data/jobs/113300-senior-software-engineer-core-data",
     "title": "Senior Software Engineer, Core & Data",
@@ -45,7 +123,9 @@
       "currency": "USD",
       "minValue": 0,
       "maxValue": 0,
-      "unit": "DAY"
+      "info": "",
+      "unit": "DAY",
+      "isEquity": false
     },
     "employmentType": "UNSET",
     "published": "Jun 5, 2018 5:23:57 PM",
@@ -100,7 +180,9 @@
       "currency": "USD",
       "minValue": 0,
       "maxValue": 0,
-      "unit": "UNSET"
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
     },
     "employmentType": "UNSET",
     "published": "May 29, 2018 4:00:59 PM",
@@ -145,7 +227,9 @@
       "currency": "USD",
       "minValue": 0,
       "maxValue": 0,
-      "unit": "UNSET"
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
     },
     "employmentType": "UNSET",
     "published": "May 27, 2018 5:03:38 PM",
@@ -186,7 +270,9 @@
       "currency": "USD",
       "minValue": 0,
       "maxValue": 0,
-      "unit": "UNSET"
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
     },
     "employmentType": "UNSET",
     "published": "May 24, 2018 5:31:24 PM",
@@ -240,7 +326,9 @@
       "currency": "USD",
       "minValue": 0,
       "maxValue": 0,
-      "unit": "UNSET"
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
     },
     "employmentType": "UNSET",
     "published": "May 24, 2018 5:31:24 PM",
@@ -295,7 +383,9 @@
       "currency": "USD",
       "minValue": 0,
       "maxValue": 0,
-      "unit": "UNSET"
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
     },
     "employmentType": "UNSET",
     "published": "May 24, 2018 5:31:24 PM",
@@ -353,12 +443,55 @@
       "currency": "USD",
       "minValue": 0,
       "maxValue": 0,
-      "unit": "UNSET"
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
     },
     "employmentType": "UNSET",
     "published": "May 17, 2018 11:57:22 AM",
     "validThrough": "Jan 1, 1970 3:00:00 AM",
     "content": "<div><h2>Mobile application developers at Open Health Network</h2><div>San Francisco Bay Area, Remote · Full Time</div><div></div></div><div><div>Skills</div><div>Java, HTML5 &amp; CSS3, Objective-C, iOS Development / Objective-C (Cocoa Touch)</div><div>Compensation</div><div>$100K–$150K<br>0.1%–0.5%</div><div>Visa Sponsorship</div><div>Not available</div></div><h3>Job Description</h3><div><p>Mobile application developers with one or more of following:<br>iOS -- Objective C or Swift<br>Android -- Java<br>HTML5 -- Cordova / PhoneGap / Ionic</p><p>Positions are to be located in Washington, DC or San Francisco Bay Area. U.S. Citizens only, able to pass background check / Public Trust.</p></div>"
+  },
+  {
+    "id": "Gjn_g26XS4eOT_gTSl6jHg",
+    "url": "https://angel.co/getondemand/jobs/67180-software-engineer-ios",
+    "title": "Software Engineer- iOS",
+    "tags": [
+      "DBG:surround``fulltim 4N remot",
+      "DBG_TECH1:k/t/w:ios/apple/4",
+      "DBG_TECH1:k/t/w:ios/mobile/4",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=4, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=4, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "Full Time",
+      "Mountain View",
+      "REMOTE1/100",
+      "Remote OK",
+      "Software Engineer",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "USD",
+      "minValue": 10000,
+      "maxValue": 20000,
+      "info": "0.1% – 0.2%",
+      "unit": "YEAR",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "May 11, 2018 6:24:05 PM",
+    "validThrough": "Jan 1, 1970 3:00:00 AM",
+    "content": "<div><h2>Software Engineer- iOS at GetOnDemand</h2><div>Mountain View, Remote · Full Time</div><div></div></div><div><div>Compensation</div><div>$10K–$20K<br>0.1%–0.2%</div><div>Visa Sponsorship</div><div>Available</div></div><h3>Job Description</h3><div><p>Can work with extensive chatting infrastructure</p></div>"
   },
   {
     "id": "-RL8XqfvQl6e52TYR1JukA",
@@ -388,7 +521,9 @@
       "currency": "USD",
       "minValue": 0,
       "maxValue": 0,
-      "unit": "UNSET"
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
     },
     "employmentType": "UNSET",
     "published": "May 4, 2018 11:10:06 PM",
@@ -430,7 +565,9 @@
       "currency": "USD",
       "minValue": 0,
       "maxValue": 0,
-      "unit": "UNSET"
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
     },
     "employmentType": "UNSET",
     "published": "May 2, 2018 8:57:29 AM",
@@ -469,7 +606,9 @@
       "currency": "USD",
       "minValue": 0,
       "maxValue": 0,
-      "unit": "UNSET"
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
     },
     "employmentType": "UNSET",
     "published": "Apr 26, 2018 11:35:28 PM",
@@ -512,7 +651,9 @@
       "currency": "USD",
       "minValue": 0,
       "maxValue": 0,
-      "unit": "UNSET"
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
     },
     "employmentType": "UNSET",
     "published": "Apr 24, 2018 10:44:01 PM",
@@ -565,7 +706,9 @@
       "currency": "USD",
       "minValue": 0,
       "maxValue": 0,
-      "unit": "UNSET"
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
     },
     "employmentType": "UNSET",
     "published": "Apr 18, 2018 5:44:23 PM",
@@ -600,7 +743,9 @@
       "currency": "USD",
       "minValue": 0,
       "maxValue": 0,
-      "unit": "UNSET"
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
     },
     "employmentType": "UNSET",
     "published": "Apr 15, 2018 2:07:51 AM",
@@ -645,7 +790,9 @@
       "currency": "USD",
       "minValue": 0,
       "maxValue": 0,
-      "unit": "UNSET"
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
     },
     "employmentType": "UNSET",
     "published": "Apr 15, 2018 2:07:51 AM",
