json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -2641,6 +2641,93 @@
     "content": "<div>  <div>    <h2>Persuade young professionals to pursue their educational dreams!</h2>      <h4>Posted Apr 14</h4>    <h3>      <span>The Art of Applying</span><br>      <span>Headquarters: New York, NY / Toronto, Ontario</span><br>        <a href='http://theartofapplying.com/sales' rel='nofollow'>http://theartofapplying.com/sales</a>      <br>      <a rel='nofollow'>View all The Art of Applying jobs →</a>    </h3>  </div></div>  <div>    <div><span>HIRING: Breakthrough Coach for The Art of Applying <br></span></div><div>(consultative sales with no cold calling)</div><div><br></div><div><span>The Art of Applying changes peoples' lives all over the world by helping them get into the best graduate schools in the world and get money to pay for it! Despite our love for the Ivy League, there are no fancy degrees required for the job we're hiring for right now.</span></div><div><br></div><div><span>Joining The Art of Applying team as a Breakthrough Coach is an invitation to break out of boredom,&nbsp;overcome&nbsp;under-earning and reach your potential.</span></div><div><br></div><div><span>Within four months on the job, you can expect to earn $5000+ per month&nbsp;while working from home on a high-energy team helping amazing clients.</span></div><div><br></div><div><span>HOW TO APPLY: Fill out the application at this link:&nbsp;</span><a href='http://theartofapplying.com/sales' rel='nofollow'>http://theartofapplying.com/sales</a></div><div><br></div><div><span>DEADLINE: ASAP. Training begins on Monday, April 23. High-quality applications received after April 23 will be put on a waiting list.</span></div><div><br></div><div><span>ABOUT OUR TEAM: Dylan is our Lead Breakthrough Coach. Just a year ago, Dylan was a small town reporter with no background in sales, and now he earns $5000-$10,000 per month working from home and helping make people's dreams come true. When you join the team, Dylan will train you intensively and be there for you every day to answer your questions as you learn how to excel in your role. And don't worry that you're bothering him; Dylan gets paid to help you succeed, and the better you do at your job, the more money he gets paid!</span></div><div><br></div><div><span>Tyler and Kiara will be listening to the recordings of every single one of your calls and giving you feedback, helping you get better and better at being persuasive and effective on your calls. Their feedback is candid but kind, so you'll never be left in the dark wondering how you're doing or how to get better.</span></div><div><br></div><div><span>Once you get someone enrolled in the program, Kyle, Kiara, or Tyler will have an onboarding call with your client, so that the person you just signed up knows how to find her way around her client portal and make the most of her time with us in the program.</span></div><div><br></div><div><span>ABOUT OUR FOUNDER &amp; CEO</span></div><div><br></div><div><span>Hey there! I'm Kaneisha Grayson, and I'm the founder and CEO of The Art of Applying. My team and I help people from around the world apply to the world's top graduate schools to study business, public policy, law, urban planning, public health, education, and design.</span></div><div><br></div><div><span>Our signature program is called Application Accelerator®. It's a one-of-a-kind bootcamp that helps high-potential high-achieving students and professionals get their applications done in less time with less stress without doing it all alone.</span></div><div><br></div><div><span>As one of my Breakthrough Coaches, your job would be to listen to the potential client's story,&nbsp;ask them lots of questions to understand their strengths, weaknesses, and worries (we'll give you the questions to ask), and then address their doubts and fears one by one about joining the Application Accelerator®.</span></div><div><br></div><div><span>To be clear, you don't need a fancy college or graduate degree, because&nbsp;you would not be the person advising the client on how to apply to graduate school; you would serve as the gatekeeper for our amazing program who helps people cross the bridge of fear from confusion to clarity.</span></div><div><br></div><div><span>I'm looking to hire three people who are&nbsp;passionate, persuasive, energetic, optimistic, committed, and resilient&nbsp;to speak to these eager and excited prospective clients and help me decide if the client is a great fit for our program as well as help&nbsp;the right people commit to working with us on their grad school applications.</span></div><div><br></div><div><span>IF YOU WANT TO...</span></div><div><br></div><div><span>* make great money while making a difference and&nbsp;crafting a fulfilling career&nbsp;on your own terms</span><br></div><div></div><div></div><div></div><div><span>* work from home.&nbsp;We're a remote team but we meet several mornings per week at 9 am Eastern Time. We work primarily from 9 am - 6 pm Eastern Time. You MUST be located in Canada or U.S. (Toronto area preferred).</span><br></div><div></div><div></div><div></div><div><span>* have in-depth conversations with 5 people every day who are excited to talk to you. The calls are about an hour long and are primarily held between 9 am - 6 pm Eastern Time.</span><br></div><div></div><div></div><div></div><div><span>* do absolutely NO cold calling. The people you'll be speaking with WANT to speak to you.</span><br></div><div></div><div></div><div></div><div><span>* feel proud of&nbsp;the&nbsp;work you do and the way you are helping change lives</span><br></div><div></div><div></div><div></div><div><span>* work on a fun, collaborative, diverse team</span><br></div><div></div><div></div><div></div><div><span>* receive guidance and mentorship from a successful Harvard Business School &amp; Harvard Kennedy School-educated entrepreneur who will deeply care about your success</span><br></div><div></div><div></div><div></div><div><span>* work with coworkers who you learn from and love to hang out with virtually and on all-expenses paid team retreats</span></div><div><br></div><div><span>...Then this position might be for you.</span></div><div><br></div><div><span>HOW TO APPLY: Fill out the application at this link:&nbsp;</span><a href='http://theartofapplying.com/sales' rel='nofollow'>http://theartofapplying.com/sales</a></div><div><br></div><div><span>Training begins on Monday, April 23. Applications received after training begins will be put on a waiting list. We are always interested in hardworking, super-committed, enthusiastic people!</span></div>  </div>  <div>    <h4>Apply for this position</h4>    <p>Complete the application here: <a href='http://theartofapplying.com/sales' rel='nofollow'>http://theartofapplying.com/sales</a></p>  </div>"
   },
   {
+    "id": "CGjtXozlR2uWyHuDxIxeIA",
+    "url": "https://angel.co/planetary-emissions-management/jobs/39716-ecological-experimentalist",
+    "title": "Ecological Experimentalist",
+    "tags": [
+      "Aqueous Co2 Measurement",
+      "Cambridge",
+      "Co2 Exsolvation",
+      "Co2 Measurement",
+      "DBG:surround``fulltim 4N remot",
+      "Eddy Covariance",
+      "Full Time",
+      "Isotopic Ecology",
+      "Operations",
+      "REMOTE1/100",
+      "Remote OK",
+      "Sensors",
+      "Soil Accumulation Chambers",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "USD",
+      "minValue": 90000,
+      "maxValue": 100000,
+      "info": "0.5% – 0.8%",
+      "unit": "YEAR",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Apr 12, 2018 7:40:30 PM",
+    "validThrough": "Jan 1, 1970 3:00:00 AM",
+    "content": "<div><h2>Ecological Experimentalist at Planetary Emissions Management</h2><div>Cambridge, Remote · Full Time</div><div></div></div><div><div>Skills</div><div>Eddy Covariance, Sensors, Co2 Measurement, Soil Accumulation Chambers, Co2 Exsolvation, Aqueous Co2 Measurement, Isotopic Ecology</div><div>Compensation</div><div>$90K–$100K<br>0.5%–0.8%</div><div>Visa Sponsorship</div><div>Not available</div></div><h3>Job Description</h3><div><p>A skilled field ecologist with extensive sensor deployment and operation skills is sought for full time employment. Intimate knowledge of eddy covariance techniques and linked measurements of soil efflux and aqueous CO2 analysis is desired. Advanced knowledge of data handling and data analysis to support high performance continuous sensor operation is required. </p></div>"
+  },
+  {
+    "id": "nOuy7uhGQYe1y6Prvc6Xxw",
+    "url": "https://angel.co/planetary-emissions-management/jobs/39714-theoretical-ecologist",
+    "title": "Theoretical Ecologist",
+    "tags": [
+      "Cambridge",
+      "DBG:surround``fulltim 4N remot",
+      "Data Analysis",
+      "Full Time",
+      "Mathematical Modeling",
+      "Operations",
+      "Overseeing Field Operations",
+      "REMOTE1/100",
+      "Remote OK",
+      "Sensor Design",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "USD",
+      "minValue": 80000,
+      "maxValue": 90000,
+      "info": "0.1% – 0.4%",
+      "unit": "YEAR",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Apr 12, 2018 7:40:30 PM",
+    "validThrough": "Jan 1, 1970 3:00:00 AM",
+    "content": "<div><h2>Theoretical Ecologist at Planetary Emissions Management</h2><div>Cambridge, Remote · Full Time</div><div></div></div><div><div>Skills</div><div>Data Analysis, Mathematical Modeling, Overseeing Field Operations, Sensor Design</div><div>Compensation</div><div>$80K–$90K<br>0.1%–0.4%</div><div>Visa Sponsorship</div><div>Not available</div></div><h3>Job Description</h3><div><p>Seeking an innovative theoretical ecologist to work in the area of forest carbon cycling and sequestration in the context of carbon trading. Knowledge of economics and geochemistry with skills in diverse model and data analysis methods is desired. Sensor design and data collection in the field will also be required. </p><p> </p></div>"
+  },
+  {
     "id": "KG1xmNteSAWQXG6FZpVA8g",
     "url": "http://workinstartups.com/job-board/job/67931/ea-to-ceo-at-founder-coaching/",
     "title": "EA to CEO",
@@ -2674,89 +2761,6 @@
     "published": "Apr 12, 2018 11:42:12 AM",
     "validThrough": "Jan 1, 1970 3:00:00 AM",
     "content": "Dave Bailey, one of the UK’s leading CEO Coaches, is looking for an Executive Assistant to support him and his growing businesses.<br /><br />*Who you'll help:*<br /><br />The best CEOs know their professional development isn't optional. It's life-or-death for their business. Dave supports the top-1% of VC-backed startup founders on their journey to becoming a great CEOs. Drawing on 10+ years as a serial founder and mentor to hundreds of startups, Dave pushes clients to self-reflect, challenge themselves, and act courageously.<br /><br />*What you'll do:*<br /><br />* Manage Dave's calendar<br />* Help onboard new clients<br />* Manage accounts receivable in Xero<br />* Manage social media using SmartQueue<br />* Publish blogs using Wix, Medium and LinkedIn<br />* Organise Dave’s travel plans<br />* Conduct small research projects<br />* Make restaurant reservations<br />* Discuss Dave’s to-do list<br /><br />*Why you’ll win:*<br /><br />* Structured - you take an unstructured problem and organise it into smaller chunks<br />* Judgement - you listen, ask questions and take considered decisions<br />* Tech-savvy - you are very comfortable picking up new interfaces on-the-fly<br />* Detail-oriented - you pay attention to the small details<br />* Near to Paddington - you are available for weekly face-to-face sessions<br /><br />*What you'll get:*<br /><br />* A competitive monthly rate<br />* Flexible work hours - approx 60% remote<br />* Personal coaching from Dave"
-  },
-  {
-    "id": "WrKMW1I3SQGDC-nI5XGYug",
-    "url": "https://angel.co/planetary-emissions-management/jobs/14717-eddy-covariance-co2-instrumentation-techncian",
-    "title": "Eddy Covariance CO2 Instrumentation Techncian",
-    "tags": [
-      "Big Data",
-      "CO2 LASER Technician",
-      "Cambridge",
-      "DBG:surround``fulltim 4N remot",
-      "Eddy Covariance",
-      "Full Time",
-      "Hardware Engineer",
-      "Licor",
-      "REMOTE1/100",
-      "Radiocarbon",
-      "Remote OK",
-      "Stable Isotopes",
-      "TECH1/unknown",
-      "TITLE1/unknown",
-      "TZ/unknown"
-    ],
-    "tagsNames1": [
-      "undefined job title"
-    ],
-    "tagsNames2": [
-      "unknown"
-    ],
-    "hiringOrganization": {
-      "name": "UNSET",
-      "sameAs": "UNSET"
-    },
-    "salary": {
-      "currency": "USD",
-      "minValue": 90000,
-      "maxValue": 100000,
-      "info": "0.25% – 0.25%",
-      "unit": "YEAR",
-      "isEquity": false
-    },
-    "employmentType": "UNSET",
-    "published": "Apr 11, 2018 6:13:15 PM",
-    "validThrough": "Jan 1, 1970 3:00:00 AM",
-    "content": "<div><h2>Eddy Covariance CO2 Instrumentation Techncian at Planetary Emissions Management</h2><div>Cambridge, Remote · Full Time</div><div></div></div><div><div>Skills</div><div>Big Data, CO2 LASER Technician, Licor, Eddy Covariance, Stable Isotopes, Radiocarbon</div><div>Compensation</div><div>$90K–$100K<br>0.25%–0.25%</div><div>Visa Sponsorship</div><div>Not available</div></div><h3>Job Description</h3><div>No description available.</div>"
-  },
-  {
-    "id": "Cpe40R1ZSRutZ_c0faPb2Q",
-    "url": "https://weworkremotely.com/remote-jobs/dadaabc-online-english-esl-tutor",
-    "title": "DaDaABC: Online English (ESL) Tutor",
-    "tags": [
-      "DBG:surround``from 4W your 2W home",
-      "DBG_TECH1:k/t/w:computer-vision/bigdata-ml/8",
-      "DBG_TECH1:k/t/w:go/go/6",
-      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=6, nodejs=0, bigdata-ml=8, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
-      "REMOTE1/100",
-      "TECH1/bigdata-ml",
-      "TECH1/go",
-      "TITLE1/unknown",
-      "TZ/unknown"
-    ],
-    "tagsNames1": [
-      "undefined job title"
-    ],
-    "tagsNames2": [
-      "bigdata-ml",
-      "go"
-    ],
-    "hiringOrganization": {
-      "name": "UNSET",
-      "sameAs": "UNSET"
-    },
-    "salary": {
-      "currency": "USD",
-      "minValue": 0,
-      "maxValue": 0,
-      "info": "",
-      "unit": "UNSET",
-      "isEquity": false
-    },
-    "employmentType": "UNSET",
-    "published": "Apr 11, 2018 12:21:03 PM",
-    "validThrough": "Jan 1, 1970 3:00:00 AM",
-    "content": "<div>  <div>    <h2>Online English (ESL) Tutor</h2>      <h4>Posted Apr 11</h4>    <h3>      <span>DaDaABC</span><br>      <span>Headquarters: Shanghai</span><br><br>      <a rel='nofollow'>View all DaDaABC jobs →</a>    </h3>  </div>    </div>  <div>    <div>If you are a fun and energetic person, If you love children and teaching, if you are looking forward to start your teaching career in China from your home, come teach with DaDaABC!</div><div><br></div><div><b>Who We Are</b></div><div>DaDaABC is an online one-on-one English education platform for children between 4 to 16 years old. We are recruiting part-time English teachers all year round, who can give fun and interactive English classes to our students via video-conference.&nbsp;</div><div><br></div><div>– DaDaABC is the first online English education company in mainland China to cooperate with the American TESOL Institute.</div><div>– In order to present world class curriculum to our students, we partner with Pearson Test of English Academic, Highlights, and National Geographic Learning.</div><div>– DaDaABC has raised the equivalent of $100 million USD in C-round financing from Tiger Global Fund and TAL Education Group.&nbsp;</div><div><br></div><div><b>What we offer</b></div><div>– Up to $25/h</div><div>– Incentives/Bonuses</div><div>– Contract: 6 or 12 month</div><div>– Paid contracted non-teaching hours</div><div>– Working hrs/week Min : 4, Max : 20</div><div><br></div><div><b>Why Choose DaDaABC</b></div><div>The difference between DaDaABC and other online English teaching company is that at DaDaABC, teachers can have their regular students, and they don’t have to teach different students in each class. Therefore, our teachers and their students can bond and build strong friendships.&nbsp;</div><div><br></div><div>Each teacher has the opportunity to come to China and join our students-teacher meetings. It is also possible for them to stay in Shanghai and become our full-time staff. They could also become a trainer, and join our recruitment team.</div><div><br></div><div><b>Job Requirement:</b></div><div>– Speak English at an idiomatic level (accent free)；</div><div>– Have teaching experience for kids (not necessary);</div><div>– TESOL/TEFL certification are preferred, or willingness to obtain certification;</div><div>– Stable and strong internet connection;</div><div>– Have a Headset;</div><div>– Willingness to commit to a regular weekly working schedule. And should be committing to teach at least 4 hours in the following timetable:</div><div><br></div><div>Monday to Friday：6:00pm-9:10pm (GMT+8 China Standard time)</div><div>Saturday &amp; Sunday: 10:00am-12:06pm; 2:00pm-4:06pm; 6:00pm-9:10pm (GMT+8 China <span>                        </span> Standard time)</div><div><br></div><div><b>Required documents:</b></div><div>– CV (Name/Gender/Nationality) with a front photo (ID photo preferred)</div><div>– Copies of certifications</div><div>– Copy of Passport or other ID.</div><div>– Your contact details, such as Phone number, email and other instant contact information as Wechat &amp; Skype.</div><div><br></div><div><b>The benefits for joining us:</b></div><div>– Enjoy the freedom to teach wherever you have a good Internet connection.</div><div>– We provide the teaching material on our online interactive educational system.</div><div>– Stable income per month: We will sign fixed time labor contract with teachers.</div><div>– Attractive payment. You will get payment in your contract hours even though you don’t have classes.</div><div>– Work in a friendly, cooperation, and harmonious working atmosphere.</div><div>– Have opportunity to join a rising rapidly company</div><div><br></div><div><b>APPLY NOW:&nbsp;https://www.dadaabc.com/go/2975</b></div><div><b><br></b></div><div>Ideal working experience for this role would include being an Educator, Teacher, ESL Teacher, English teacher, Trainer, Elementary School Teacher, Kindergarten Teacher, teacher assistant. Or holding a bachelor degree from any subject including but not limited to Early Childhood Education, Child Development, Elementary Education, Secondary Education, Advising, etc.</div>  </div>  <div>    <h4>Apply for this position</h4>    <p>APPLY NOW: <a href='https://www.dadaabc.com/go/2975' rel='nofollow'>https://www.dadaabc.com/go/2975</a></p>  </div>"
   }
 ]
 }
